--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  
   <title>Form Validator</title>
 </head>
 <body>
@@ -35,7 +35,6 @@
       <button type="submit">Submit</button>
     </form>
   </div>
-  
-  
 </body>
+<script src="script.js"></script> <!--html이 로드되기 전에 js에서 html를 참조하기 때문에 body아래로 넣어줌 -->
 </html>
